@@ -3,17 +3,11 @@
 # is named "000.R" (zeros).
 ##############################################################################
 
-if (R.Version()$major < 2) {
-  require(R.oo) || stop("Could not load package: R.oo");
-  options(dontWarnPkgs=unique(c("R.oo", 
-                                "base", "datasets", "graphics", "grDevices", 
-       "methods", "stats", "utils", "Autoloads", getOption("dontWarnPkgs"))))
-} else {
-  # Is autoload() allowed in R v2.0.0 or higher? According to the help one
-  # should not use require().
-  # require(R.oo) || stop("Could not load package: R.oo");
-  autoload("appendVarArgs", package="R.methodsS3")
-  autoload("hasVarArgs", package="R.methodsS3")
-  autoload("setMethodS3", package="R.methodsS3")
-  autoload("setConstructorS3", package="R.oo")
-}
+# Is autoload() allowed in R v2.0.0 or higher? According to the help one
+# should not use require().
+# require(R.oo) || stop("Could not load package: R.oo");
+autoload("appendVarArgs", package="R.methodsS3")
+autoload("hasVarArgs", package="R.methodsS3")
+autoload("setMethodS3", package="R.methodsS3")
+autoload("setConstructorS3", package="R.oo")
+
